welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:16: error: type yellow is not a member of object java.awt.Color
def faireV(c:Color.yellow){
                   ^MethodsPicture:6: error: type yellow is not a member of object java.awt.Color
	faireV(c:Color.yellow);
                       ^MethodsPicture:7: error: type red is not a member of object java.awt.Color
	faireV(c:Color.red);
                       ^MethodsPicture:8: error: type blue is not a member of object java.awt.Color
	faireV(c:Color.blue);
                       ^MethodsPicture:9: error: type green is not a member of object java.awt.Color
	faireV(c:Color.green);	
                       ^MethodsPicture:18: error: type yellow is not a member of object java.awt.Color
setCouleurBrosse(c:Color.yellow);
                         ^